<resources>
    <!--权限-->
    <string name="permission_cancel">Cancel</string>
    <string name="permission_to_set">Go to-settings</string>
    <string name="permission_set_permission">Set permissions manually</string>
    <string name="permission_permission_tip">If you want to use this function properly,you need to grant: %spermissions,\nSettings flow:app information -> permissions</string>

    <string name="error_tip_request_failed">The request failed</string>
    <string name="error_tip_check_network_connection">Please check your network connection</string>
    <string name="error_tip_unable_connect_server">Unable to connect to server, please try again later</string>
    <string name="error_tip_connection_has_been_disconnected">The connection has been disconnected. Please try again later</string>
    <string name="error_tip_time_out">Request timeout, please try again later</string>
    <string name="error_tip_request_error">Request error</string>

    <string name="loading_tip">Loading, please wait.</string>
    <string name="title_default"></string>
    <string name="mine_log_out">Log out</string>

    <!--以上已经翻译-->
    <string name="dialog_take_photo">Take a photo</string>
    <string name="dialog_select_from_album">Select from the album</string>
    <string name="dialog_cancel">Cancel</string>

    <string name="Cancel">Cancel</string>
    <string name="Confirm">OK</string>
    <string name="last_step">Previous</string>
    <string name="next_step">Next</string>
    <string name="select_time">Select time</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="day">Day</string>
    <string name="hour">Hour</string>
    <string name="minute">Minute</string>
    <string name="monday">MON</string>
    <string name="tuesday">TUE</string>
    <string name="wednesday">WED</string>
    <string name="thursday">THR</string>
    <string name="friday">FRI</string>
    <string name="saturday">SAT</string>
    <string name="sunday">SUN</string>
    <string name="january">Jan</string>
    <string name="february">Feb</string>
    <string name="march">Mar</string>
    <string name="april">Apr</string>
    <string name="may">May</string>
    <string name="june">Jun</string>
    <string name="july">Jul</string>
    <string name="august">Aug</string>
    <string name="september">Sept</string>
    <string name="october">Oct</string>
    <string name="november">Nov</string>
    <string name="december">Dec</string>

    <string name="textNoData">No data</string>
    <string name="text_no_data_default">Data error,click to request</string>
    <string name="text_empty_data_default">Data is empty</string>
    <string name="text_no_permission">No permissions to access the information. Contact your administrator to request access</string>
    <string name="textNoContentData">No relevant content found</string>

    <string name="dialog_i_see">I see</string>
    <string name="cc_str_cancel">Cancel</string>
    <string name="cc_str_confirm">Confirm</string>
    <string name="cc_str_success">Success</string>
    <string name="cc_str_close">Close</string>
    <string name="cc_str_qr_code_title">Scan code</string>
    <string name="cc_str_flash">Flash</string>
    <string name="cc_scan_tip">Align the viewfinder with the QR code,\nyou can scan automatically</string>
    <string name="cc_scan_max">max devices</string>

    <string name="cc_text_get_code_number">Send Code</string>
    <string name="cc_send_countdown">%ds</string>


    <string name="permission_location">Location</string>
    <string name="google_map_install_tip">Please install Google Map before processing this request.</string>

    <string name="str_empty_vehicle">There is no device letter yet,please scan or receive the device SN to enter</string>
   <string name="str_remain_rental_days">Remaining Rental days: %S days</string>
</resources>