<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/noPermissionView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:clickable="false">

        <ImageView
            android:id="@+id/ivErrorImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/no_permission"
            android:tooltipText="@string/permission_cancel"
            app:layout_constraintBottom_toTopOf="@id/dataErrorInfoTv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/dataErrorInfoTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_no_permission"
            app:layout_constrainedHeight="true"
            app:layout_constrainedWidth="true"
            android:layout_marginTop="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivErrorImg" />

        <TextView
            android:id="@+id/tvLogOut"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_marginTop="11dp"
            android:gravity="center_vertical"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/mine_log_out"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dataErrorInfoTv"
            app:layout_goneMarginStart="20dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>