<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/date_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clFirstPageTop"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_title_first"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/select_time"
                android:textColor="@color/date_picker_text_dark"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/vFirstPage"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/date_picker_divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/clFirstPageTop" />

        <LinearLayout
            android:id="@+id/llFirstPageBottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="20dp"
            android:paddingTop="15dp"
            android:paddingEnd="20dp"
            android:paddingBottom="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/vFirstPage">

            <com.base.common.timepicker.PickerView
                android:id="@+id/dpv_year"
                android:layout_width="0dp"
                android:layout_height="@dimen/picker_view_height"
                android:layout_weight="3" />

            <TextView
                android:id="@+id/tvYearUnit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/year"
                android:textColor="@color/date_picker_text_dark"
                android:textSize="@dimen/date_unit_text_size" />

            <com.base.common.timepicker.PickerView
                android:id="@+id/dpv_month"
                android:layout_width="0dp"
                android:layout_height="@dimen/picker_view_height"
                android:layout_weight="2" />

            <TextView
                android:id="@+id/tvMonthUnit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/month"
                android:textColor="@color/date_picker_text_dark"
                android:textSize="@dimen/date_unit_text_size" />

            <com.base.common.timepicker.PickerView
                android:id="@+id/dpv_day"
                android:layout_width="0dp"
                android:layout_height="@dimen/picker_view_height"
                android:layout_weight="2" />

            <TextView
                android:id="@+id/tvDayUnit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/day"
                android:textColor="@color/date_picker_text_dark"
                android:textSize="@dimen/date_unit_text_size" />

        </LinearLayout>

        <androidx.constraintlayout.widget.Group
            android:id="@+id/GroupFirst"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:constraint_referenced_ids="clFirstPageTop,vFirstPage,llFirstPageBottom" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clSecondPageTop"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/select_time"
                android:textColor="@color/date_picker_text_dark"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/vSecondPage"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/date_picker_divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/clSecondPageTop" />

        <LinearLayout
            android:id="@+id/llSecondPageBottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="20dp"
            android:paddingTop="15dp"
            android:paddingEnd="20dp"
            android:paddingBottom="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/vSecondPage">


            <com.base.common.timepicker.PickerView
                android:id="@+id/dpv_hour"
                android:layout_width="0dp"
                android:layout_height="@dimen/picker_view_height"
                android:layout_weight="2" />

            <TextView
                android:id="@+id/tv_hour_unit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/hour"
                android:textColor="@color/date_picker_text_dark"
                android:textSize="@dimen/date_unit_text_size" />

            <com.base.common.timepicker.PickerView
                android:id="@+id/dpv_minute"
                android:layout_width="0dp"
                android:layout_height="@dimen/picker_view_height"
                android:layout_weight="2" />

            <TextView
                android:id="@+id/tv_minute_unit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/minute"
                android:textColor="@color/date_picker_text_dark"
                android:textSize="@dimen/date_unit_text_size" />

            <com.base.common.timepicker.PickerView
                android:id="@+id/dpv_second"
                android:layout_width="0dp"
                android:layout_height="@dimen/picker_view_height"
                android:layout_weight="2" />

        </LinearLayout>

        <androidx.constraintlayout.widget.Group
            android:id="@+id/GroupSecond"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="clSecondPageTop,vSecondPage,llSecondPageBottom" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/cc_bg_f5f8fb_r8"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/Cancel"
        android:textColor="@color/cc_color_e60c0c0d"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tv_next_step"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/date_content" />

    <TextView
        android:id="@+id/tv_next_step"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/bg_btn_confirm"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/next_step"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_cancel"
        app:layout_constraintTop_toBottomOf="@id/date_content" />

</androidx.constraintlayout.widget.ConstraintLayout>