<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="Object" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.journeyapps.barcodescanner.DecoratedBarcodeView
            android:id="@+id/zxing_barcode_scanner"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:zxing_scanner_layout="@layout/layout_custom_barcode_view"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">
        </com.journeyapps.barcodescanner.DecoratedBarcodeView>


        <ImageView
            android:visibility="gone"
            android:id="@+id/imgAnimation"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:background="@mipmap/img_bg_scan"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />
        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="30dp"
            android:scaleType="center"
            android:src="@mipmap/img_icon_back"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:layout_marginTop="30dp"
            android:gravity="center_vertical"
            android:paddingEnd="30dp"
            android:text="@string/cc_str_qr_code_title"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@id/imgBack"
            app:layout_constraintLeft_toRightOf="@id/imgBack"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <TextView
            android:id="@+id/tvInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="77dp"
            android:layout_marginBottom="70dp"
            android:drawableTop="@mipmap/img_icon_input"
            android:drawablePadding="8dp"
            android:text="手动输入"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:id="@+id/tvFlash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="70dp"
            android:drawableTop="@mipmap/img_icon_flash_off"
            android:drawablePadding="8dp"
            android:gravity="center"
            android:text="@string/cc_str_flash"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="35dp"
            android:gravity="center"
            android:text="@string/cc_scan_tip"
            android:textColor="@color/white"
            android:textSize="13sp"
            app:layout_constraintBottom_toTopOf="@id/tvFlash"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
